--- a/exercise8/css/course.css
+++ b/exercise8/css/course.css
@@ -1,3 +1,28 @@
 .progress-bar {
 	background-color: #56BABE;
 }
+
+/* close pdf button */
+.close-pdf {
+	padding: 0.5rem;
+	color: #d51a68;
+	border: solid 1px #d51a68;
+	border-radius: 500px;
+	display: flex;
+	flex-direction: row;
+	width: fit-content;
+	margin: 1rem 0 1rem auto;
+	cursor: pointer;
+}
+.close-pdf > span {
+	margin: auto 3px;	
+}
+.close-pdf > p {
+	margin: auto;
+}
+.close-pdf:hover {
+	border: solid 1px #d51a68;
+	border-radius: 500px;
+	background-color: #d51a68;
+	color: #fff;
+}
