--- a/exercise8/css/course.css
+++ b/exercise8/css/course.css
@@ -26,3 +26,16 @@
 	height: 700px;
 	width: 100%;
 }
+.custom-modal-container {
+	align-self: flex-start;
+	width:100%;
+	margin-top: -15rem;
+	padding-left: 0;
+}
+
+@media screen and (max-width:767px) {
+	.custom-modal-container {
+		margin-top: auto;
+	}
+}
+
